startup.log
Stage Monitoring Tool — Startscript
==================================================
Platform:     Windows-11-10.0.26200-SP0
Python:       C:\Users\baraa\Programming-Project-Group2-\backend\.venv\Scripts\python.exe (3.14.5 (tags/v3.14.5:5607950, May 10 2026, 10:43:50) [MSC v.1944 64 bit (AMD64)])
Project dir:  C:\Users\baraa\Programming-Project-Group2-
uv available: NO
Working dir:  C:\Users\baraa\Programming-Project-Group2-
==================================================

uv niet gevonden
Gebruik: C:\Users\baraa\Programming-Project-Group2-\backend\.venv\Scripts\python.exe
Controleren of afhankelijkheden geïnstalleerd zijn...
[CMD] C:\Users\baraa\Programming-Project-Group2-\backend > C:\Users\baraa\Programming-Project-Group2-\backend\.venv\Scripts\python.exe -c import importlib.util, sys; mods = ['uvicorn', 'fastapi', 'sqlalchemy']; missing = [m for m in mods if importlib.util.find_spec(m) is None]; sys.exit(1 if missing else 0)
[EXIT] code=0
Dependencies OK
[CMD] C:\Users\baraa\Programming-Project-Group2-\backend > C:\Users\baraa\Programming-Project-Group2-\backend\.venv\Scripts\python.exe -c import sqlite3, sys; conn = sqlite3.connect('C:\Users\baraa\Programming-Project-Group2-\backend\stage_monitoring.db'); cursor = conn.cursor(); cursor.execute('SELECT COUNT(*) FROM users;'); count = cursor.fetchone()[0]; conn.close(); sys.exit(0 if count > 0 else 1)
[EXIT] code=1
[STDERR] File "<string>", line 1
    import sqlite3, sys; conn = sqlite3.connect('C:\Users\baraa\Programming-Project-Group2-\backend\stage_monitoring.db'); cursor = conn.cursor(); cursor.execute('SELECT COUNT(*) FROM users;'); count = cursor.fetchone()[0]; conn.close(); sys.exit(0 if count > 0 else 1)
                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \UXXXXXXXX escape
Database leeg of niet gevonden. Seeding met demo-data...
[CMD] C:\Users\baraa\Programming-Project-Group2-\backend > C:\Users\baraa\Programming-Project-Group2-\backend\.venv\Scripts\python.exe C:\Users\baraa\Programming-Project-Group2-\backend\seed_complete.py
[EXIT] code=1
[STDERR] Traceback (most recent call last):
  File "C:\Users\baraa\Programming-Project-Group2-\backend\seed_complete.py", line 16, in <module>
    from sqlalchemy.orm import Session
  File "C:\Users\baraa\Programming-Project-Group2-\backend\.venv\Lib\site-packages\sqlalchemy\__init__.py", line 13, in <module>
    from .engine import AdaptedConnection as AdaptedConnection
  File "C:\Users\baraa\Programming-Project-Group2-\backend\.venv\Lib\site-packages\sqlalchemy\engine\__init__.py", line 18, in <module>
    from . import events as events
  File "C:\Users\baraa\Programming-Project-Group2-\backend\.venv\Lib\site-packages\sqlalchemy\engine\events.py", line 19, in <module>
    from .base import Connection
  File "C:\Users\baraa\Programming-Project-Group2-\backend\.venv\Lib\site-packages\sqlalchemy\engine\base.py", line 30, in <module>
    from .interfaces import BindTyping
  File "C:\Users\baraa\Programming-Project-Group2-\backend\.venv\Lib\site-packages\sqlalchemy\engine\interfaces.py", line 38, in <module>
    from ..sql.compiler import Compiled as Compiled
  File "C:\Users\baraa\Programming-Project-Group2-\backend\.venv\Lib\site-packages\sqlalchemy\sql\__init__.py", line 14, in <module>
    from .compiler import COLLECT_CARTESIAN_PRODUCTS as COLLECT_CARTESIAN_PRODUCTS
  File "C:\Users\baraa\Programming-Project-Group2-\backend\.venv\Lib\site-packages\sqlalchemy\sql\compiler.py", line 61, in <module>
    from . import crud
  File "C:\Users\baraa\Programming-Project-Group2-\backend\.venv\Lib\site-packages\sqlalchemy\sql\crud.py", line 34, in <module>
    from . import dml
  File "C:\Users\baraa\Programming-Project-Group2-\backend\.venv\Lib\site-packages\sqlalchemy\sql\dml.py", line 34, in <module>
    from . import util as sql_util
  File "C:\Users\baraa\Programming-Project-Group2-\backend\.venv\Lib\site-packages\sqlalchemy\sql\util.py", line 46, in <module>
    from .ddl import sort_tables as sort_tables  # noqa: F401
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\baraa\Programming-Project-Group2-\backend\.venv\Lib\site-packages\sqlalchemy\sql\ddl.py", line 30, in <module>
    from .elements import ClauseElement
  File "C:\Users\baraa\Programming-Project-Group2-\backend\.venv\Lib\site-packages\sqlalchemy\sql\elements.py", line 810, in <module>
    class SQLCoreOperations(Generic[_T_co], ColumnOperators, TypingOnly):
    ...<472 lines>...
                ...
  File "C:\Users\baraa\AppData\Local\Python\pythoncore-3.14-64\Lib\typing.py", line 1175, in _generic_init_subclass
    super(Generic, cls).__init_subclass__(*args, **kwargs)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "C:\Users\baraa\Programming-Project-Group2-\backend\.venv\Lib\site-packages\sqlalchemy\util\langhelpers.py", line 1988, in __init_subclass__
    raise AssertionError(
    ...<2 lines>...
    )
AssertionError: Class <class 'sqlalchemy.sql.elements.SQLCoreOperations'> directly inherits TypingOnly but has additional attributes {'__firstlineno__', '__static_attributes__'}.

==================================================
FATAL ERROR: seed_complete.py failed with exit code 1
==================================================
Full log written to: C:\Users\baraa\Programming-Project-Group2-\startup.log

Press Enter to exit...
